# the-crab-engram

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  engram-learn.service  engram-learn.timer
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-04-22_engram-install.md  2026-04-22_tui-overhaul.md  2026-04-23_learn-daemon.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-build-matrix/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/phases/02-self-update-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-version-transparency/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-backup-core/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-restore-auto-backup/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  SELF-UPDATE.md  STACK.md  SUMMARY.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: attachment.rs  belief.rs  boundary.rs  capsule.rs  compaction.rs  crypto.rs  entity.rs  error.rs  graph.rs  lib.rs  lifecycle.rs  memory.rs  observation.rs  permissions.rs  salience.rs  score.rs  session.rs  stream.rs  topic.rs
crates/learn/: Cargo.toml
crates/learn/resources/: kg_extraction.gbnf
crates/learn/src/: anti_pattern.rs  boundary_tracker.rs  capsule_builder.rs  consolidation.rs  daemon.rs  extraction.rs  graph_evolver.rs  inference.rs  lib.rs  salience_infer.rs  smart_injector.rs  spaced_review.rs  stream_engine.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: config_merge.rs  doctor.rs  lib.rs  opencode_paths.rs  plugin_template.rs  server.rs
crates/mcp/src/agents/: adapter.rs  claude_code.rs  cursor.rs  hermes.rs  mod.rs  opencode.rs  windsurf.rs
crates/mcp/src/tools/: mod.rs
crates/search/: Cargo.toml
crates/search/src/: embedder.rs  hybrid.rs  lib.rs
crates/search/src/embedder/: candle_nomic.rs  mod.rs
crates/search/tests/: ab_validation.rs  validation_report.md
crates/store/: Cargo.toml
crates/store/src/: lib.rs  migration.rs  params.rs  sqlite.rs  trait.rs
crates/store/src/migrations/: 001_initial.sql  002_fts.sql  003_vectors.sql  004_graph.sql  006_capsules.sql  007_cross_project.sql  008_episodic_semantic.sql  009_review_schedule.sql  011_attachments.sql  012_boundaries.sql  013_agent_personalities.sql  015_beliefs.sql  016_entities.sql  017_bitemporal.sql  018_binary_embeddings.sql
crates/sync/: Cargo.toml
crates/sync/src/: chunk.rs  crdt.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs
docs/: openapi.yaml  v2-plan.md
docs/en/: api.md  architecture.md  changelog.md  data-models.md  opencode-setup.md  overview.md  security-posture.md  setup.md  user-guide.md
docs/plans/: 2026-05-05-engram-install-cli.md  2026-05-05-fix-migration-deadlock.md  2026-05-05-hermes-plugin-python.md
openspec/changes/archive/2026-04-07-engram-v2/: design.md  tasks.md
openspec/changes/archive/2026-04-07-engram-v2/specs/auto-learning/: spec.md
openspec/changes/archive/2026-04-07-engram-v2/specs/mcp-server/: spec.md
openspec/changes/archive/2026-04-07-engram-v2/specs/smart-context/: spec.md
openspec/changes/archive/2026-04-07-engram-wiring/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/engram-v2/: design.md  proposal.md  tasks.md
openspec/changes/engram-v2/specs/core-types/: spec.md
openspec/changes/engram-v2/specs/mcp-server/: spec.md
openspec/changes/engram-v2/specs/search-engine/: spec.md
openspec/changes/engram-v2/specs/storage-layer/: spec.md
openspec/specs/engram-wiring/: spec.md
plugins/hooks/: capture-errors.sh  post-commit
plugins/opencode/: the-crab-engram.ts
scripts/: generate-changelog.sh  release.sh
sdd/engram-v2/: tasks.md
specs/009-opencode-deep-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-opencode-deep-integration/contracts/: api-contracts.md
src/: learn_daemon.rs  main.rs  main.rs.bak  opencode_setup.rs
tests/: integration_store.rs  opencode_setup_test.rs
