[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "2.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/maisonnat/the-crab-engram"

[workspace.dependencies]
engram-core = { path = "crates/core" }
engram-store = { path = "crates/store" }
engram-mcp = { path = "crates/mcp" }
engram-search = { path = "crates/search" }
engram-learn = { path = "crates/learn" }
engram-api = { path = "crates/api" }
engram-tui = { path = "crates/tui" }
engram-sync = { path = "crates/sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
sha2 = "0.10"
chacha20poly1305 = "0.10"
base64 = "0.22"
rusqlite = { version = "0.35", features = ["bundled", "serde_json", "backup"] }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"

[package]
name = "engram-rust"
version = "2.1.1"
edition = "2024"

[[bin]]
name = "the-crab-engram"
path = "src/main.rs"

[dependencies]
engram-core = { workspace = true }
engram-store = { workspace = true }
engram-mcp = { workspace = true }
engram-api = { workspace = true }
engram-tui = { workspace = true }
engram-sync = { workspace = true }
engram-learn = { workspace = true }
engram-search = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8" }
sha2 = { workspace = true }
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
self_update = { version = "0.44.0", features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"], default-features = false }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
