[package]
name = "engram-api"
version.workspace = true
edition.workspace = true

[dependencies]
engram-core = { workspace = true }
engram-store = { workspace = true }
engram-learn = { path = "../learn" }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
