[package]
name = "engram-learn"
version.workspace = true
edition.workspace = true

[dependencies]
engram-core = { workspace = true }
engram-store = { workspace = true }
engram-search = { path = "../search" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
