[package]
name = "engram-search"
version.workspace = true
edition.workspace = true

[dependencies]
engram-core = { workspace = true }
fastembed = "5"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
