[package]
name = "engram-search"
version.workspace = true
edition.workspace = true

[dependencies]
engram-core = { workspace = true }
fastembed = "5"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }

# Candle inference (optional, behind "candle" feature)
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
