[package]
name = "engram-store"
version.workspace = true
edition.workspace = true

[dependencies]
engram-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
